// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emails Input Renderer (snapshots) should create empty input 1`] = `
<body>
  <div
    id="input-wrapper"
  >
    <ul
      class="container"
    >
      <li
        class="container__item container__item_input"
      >
        <input
          class="container__input"
          placeholder="add more people..."
          type="text"
        />
      </li>
    </ul>
  </div>
</body>
`;

exports[`Emails Input Renderer (snapshots) should render email items 1`] = `
<body>
  <div
    id="input-wrapper"
  >
    <ul
      class="container"
    >
      <li
        class="container__item container__item_email container__item_invalid"
        data-email="abcdef"
      >
        <span
          aria-label="abcdef, invalid"
          class="container__email"
        >
          abcdef
        </span>
        <button
          aria-label="Remove abcdef"
          class="container__remove"
        >
          test-file-stub
        </button>
      </li>
      <li
        class="container__item container__item_email"
        data-email="abcdef@ghijk.lm"
      >
        <span
          aria-label="abcdef@ghijk.lm, valid"
          class="container__email"
        >
          abcdef@ghijk.lm
        </span>
        <button
          aria-label="Remove abcdef@ghijk.lm"
          class="container__remove"
        >
          test-file-stub
        </button>
      </li>
      <li
        class="container__item container__item_email"
        data-email="fedcba@ghijk.lm"
      >
        <span
          aria-label="fedcba@ghijk.lm, valid"
          class="container__email"
        >
          fedcba@ghijk.lm
        </span>
        <button
          aria-label="Remove fedcba@ghijk.lm"
          class="container__remove"
        >
          test-file-stub
        </button>
      </li>
      <li
        class="container__item container__item_input"
      >
        <input
          class="container__input"
          placeholder="add more people..."
          type="text"
        />
      </li>
    </ul>
  </div>
</body>
`;

exports[`Emails Input Renderer (snapshots) should rerender email items 1`] = `
<body>
  <div
    id="input-wrapper"
  >
    <ul
      class="container"
    >
      <li
        class="container__item container__item_email container__item_invalid"
        data-email="abcdef"
      >
        <span
          aria-label="abcdef, invalid"
          class="container__email"
        >
          abcdef
        </span>
        <button
          aria-label="Remove abcdef"
          class="container__remove"
        >
          test-file-stub
        </button>
      </li>
      <li
        class="container__item container__item_email"
        data-email="fedcba@ghijk.lm"
      >
        <span
          aria-label="fedcba@ghijk.lm, valid"
          class="container__email"
        >
          fedcba@ghijk.lm
        </span>
        <button
          aria-label="Remove fedcba@ghijk.lm"
          class="container__remove"
        >
          test-file-stub
        </button>
      </li>
      <li
        class="container__item container__item_email"
        data-email="12345@gmail.com"
      >
        <span
          aria-label="12345@gmail.com, valid"
          class="container__email"
        >
          12345@gmail.com
        </span>
        <button
          aria-label="Remove 12345@gmail.com"
          class="container__remove"
        >
          test-file-stub
        </button>
      </li>
      <li
        class="container__item container__item_input"
      >
        <input
          class="container__input"
          placeholder="add more people..."
          type="text"
        />
      </li>
    </ul>
  </div>
</body>
`;
